--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-sm-6 col-lg-3 mb-5">
                     <div class="footer__about">
                         <h5>ABOUT AGENCY</h5>
                         <p>The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-sm-6 col-lg-3 mb-5">
                     <div class="footer__links">
                         <h5>NAVIGATION LINKS</h5>
                         <div class="row">
@@ -478,7 +478,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-sm-6 col-lg-3 mb-5">
                     <div class="footer__newsletter">
                         <h5>NEWSLETTER</h5>
                         <p>For business professionals caught between high OEM price and mediocre print and graphic output,</p>
@@ -492,7 +492,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-sm-6 col-lg-3 mb-5">
                     <div class="instafead">
                         <h5>INSTAFEED</h5>
                         <ul class="list-unstyled d-flex flex-wrap">
